force-app/main/default/objects/Order_Information__c/Order_Information__c.object-meta.xml
<CustomObject>
    <label>E-Com Order</label>
    <nameField>
        <label>Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>E-Com Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>