force-app/main/default/objects/Order_Information__c/fields/Arriving_Date__c.field-meta.xml
<CustomField>
    <fullName>Arriving_Date__c</fullName>
    <label>Arriving Date</label>
    <type>TextArea</type>
</CustomField>