force-app/main/default/objects/Order_Information__c/fields/Bank_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Ref_Number__c</fullName>
    <label>Bank Ref Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>