force-app/main/default/objects/Order_Information__c/fields/Billing_GSTInNumber__c.field-meta.xml
<CustomField>
    <fullName>Billing_GSTInNumber__c</fullName>
    <label>GSTInNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>