force-app/main/default/objects/Order_Information__c/fields/Billing_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Billing_Pincode__c</fullName>
    <label>Pincode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>