force-app/main/default/objects/Order_Information__c/fields/bulk_discount__c.field-meta.xml
<CustomField>
    <fullName>bulk_discount__c</fullName>
    <label>Bulk Discount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>