force-app/main/default/objects/Order_Information__c/fields/CC_Remarks_2__c.field-meta.xml
<CustomField>
    <fullName>CC_Remarks_2__c</fullName>
    <label>CC Remarks 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>