force-app/main/default/objects/Order_Information__c/fields/CodCharge__c.field-meta.xml
<CustomField>
    <fullName>CodCharge__c</fullName>
    <label>CodCharge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>