force-app/main/default/objects/Order_Information__c/fields/Confirmed_Order__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed Order</label>
    <type>Checkbox</type>
</CustomField>