force-app/main/default/objects/Order_Information__c/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <formula>Customer_Contact__r.E_Commerce_User_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomerName</label>
    <type>Text</type>
</CustomField>