force-app/main/default/objects/Order_Information__c/fields/Discount_Price__c.field-meta.xml
<CustomField>
    <fullName>Discount_Price__c</fullName>
    <label>Promotional Discount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>