force-app/main/default/objects/Order_Information__c/fields/Distributor_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Allocated__c</fullName>
    <label>Distributor Allocated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>