force-app/main/default/objects/Order_Information__c/fields/Ecom_Order_JSON__c.field-meta.xml
<CustomField>
    <fullName>Ecom_Order_JSON__c</fullName>
    <label>Ecom Order JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>