force-app/main/default/objects/Order_Information__c/fields/Ecom_Order_NES__c.field-meta.xml
<CustomField>
    <fullName>Ecom_Order_NES__c</fullName>
    <description>Product NES Total On Ecom Order</description>
    <inlineHelpText>Product NES Total On Ecom Order</inlineHelpText>
    <label>Ecom Order NES</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>