force-app/main/default/objects/Order_Information__c/fields/Industry_by_API__c.field-meta.xml
<CustomField>
    <fullName>Industry_by_API__c</fullName>
    <label>Industry by API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>