force-app/main/default/objects/Order_Information__c/fields/IndustryBuying_Status__c.field-meta.xml
<CustomField>
    <fullName>IndustryBuying_Status__c</fullName>
    <label>IndustryBuying Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Dispatched</fullName>
            </value>
            <value>
                <fullName>Out for Delivery</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>