force-app/main/default/objects/Order_Information__c/fields/Intro_Discount__c.field-meta.xml
<CustomField>
    <fullName>Intro_Discount__c</fullName>
    <label>Intro Discount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>