force-app/main/default/objects/Order_Information__c/fields/Invoice_URL__c.field-meta.xml
<CustomField>
    <fullName>Invoice_URL__c</fullName>
    <label>Invoice URL</label>
    <type>Url</type>
</CustomField>