force-app/main/default/objects/Order_Information__c/fields/is_ist_mode__c.field-meta.xml
<CustomField>
    <fullName>is_ist_mode__c</fullName>
    <label>is ist mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>