force-app/main/default/objects/Order_Information__c/fields/IST_Comments__c.field-meta.xml
<CustomField>
    <fullName>IST_Comments__c</fullName>
    <label>IST Comments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Placed another order for the customer online</fullName>
            </value>
            <value>
                <fullName>Working on getting the order offline</fullName>
            </value>
            <value>
                <fullName>Customer not interested</fullName>
            </value>
            <value>
                <fullName>Unable to connect with the customer despite 3 attempts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>