force-app/main/default/objects/Order_Information__c/fields/ist_user_email__c.field-meta.xml
<CustomField>
    <fullName>ist_user_email__c</fullName>
    <label>ist user email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>