force-app/main/default/objects/Order_Information__c/fields/LSP__c.field-meta.xml
<CustomField>
    <fullName>LSP__c</fullName>
    <label>LSP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>