force-app/main/default/objects/Order_Information__c/fields/Not_interested__c.field-meta.xml
<CustomField>
    <fullName>Not_interested__c</fullName>
    <label>Not interested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price too high</fullName>
            </value>
            <value>
                <fullName>Was exploring products</fullName>
            </value>
            <value>
                <fullName>Cant make online payments</fullName>
            </value>
            <value>
                <fullName>Need more discounts</fullName>
            </value>
            <value>
                <fullName>Will buy offline</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>