force-app/main/default/objects/Order_Information__c/fields/Not_to_be_considered__c.field-meta.xml
<CustomField>
    <fullName>Not_to_be_considered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not to be considered</label>
    <type>Checkbox</type>
</CustomField>