force-app/main/default/objects/Order_Information__c/fields/Number_of_minutes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_minutes__c</fullName>
    <formula>(NOW() - CreatedDate)*1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>