force-app/main/default/objects/Order_Information__c/fields/Online_order_outlier__c.field-meta.xml
<CustomField>
    <fullName>Online_order_outlier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online order outlier</label>
    <type>Checkbox</type>
</CustomField>