force-app/main/default/objects/Order_Information__c/fields/Order_placed_through_IST__c.field-meta.xml
<CustomField>
    <fullName>Order_placed_through_IST__c</fullName>
    <formula>IF( Project__r.Order_placed_through_IST__c == true , true,false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order placed through IST</label>
    <type>Checkbox</type>
</CustomField>