force-app/main/default/objects/Order_Information__c/fields/Order_Shipment_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Shipment_Status__c</fullName>
    <label>Order Shipment Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>