force-app/main/default/objects/Order_Information__c/fields/OrderConfirmationDate__c.field-meta.xml
<CustomField>
    <fullName>OrderConfirmationDate__c</fullName>
    <label>OrderConfirmationDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>