force-app/main/default/objects/Order_Information__c/fields/orderDate__c.field-meta.xml
<CustomField>
    <fullName>orderDate__c</fullName>
    <label>Order Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>