force-app/main/default/objects/Order_Information__c/fields/org_total__c.field-meta.xml
<CustomField>
    <fullName>org_total__c</fullName>
    <label>MRP Total</label>
    <length>255</length>
    <type>Text</type>
</CustomField>