force-app/main/default/objects/Order_Information__c/fields/Other_Comments_CC__c.field-meta.xml
<CustomField>
    <fullName>Other_Comments_CC__c</fullName>
    <label>Other Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>