force-app/main/default/objects/Order_Information__c/fields/Pay_Status__c.field-meta.xml
<CustomField>
    <fullName>Pay_Status__c</fullName>
    <label>Payment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>