force-app/main/default/objects/Order_Information__c/fields/Payment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received_Date__c</fullName>
    <label>Payment Received Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>