force-app/main/default/objects/Order_Information__c/fields/Pincode__c.field-meta.xml
<CustomField>
    <fullName>Pincode__c</fullName>
    <label>DelPincode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>