force-app/main/default/objects/Order_Information__c/fields/PlaceEmail__c.field-meta.xml
<CustomField>
    <fullName>PlaceEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PlaceEmail</label>
    <type>Checkbox</type>
</CustomField>