force-app/main/default/objects/Order_Information__c/fields/Product_Shipped_Count__c.field-meta.xml
<CustomField>
    <fullName>Product_Shipped_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Product Shipped Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>