force-app/main/default/objects/Order_Information__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>E-Com Orders</relationshipLabel>
    <relationshipName>E_Com_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>