force-app/main/default/objects/Order_Information__c/fields/Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Number__c</fullName>
    <formula>Project__r.Project_S_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Number</label>
    <type>Text</type>
</CustomField>