force-app/main/default/objects/Order_Information__c/fields/Reasons_for_cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_cancellation__c</fullName>
    <label>Reasons for cancellation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>