force-app/main/default/objects/Order_Information__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>