force-app/main/default/objects/Order_Information__c/fields/Shipping_Charge__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Charge__c</fullName>
    <label>Shipping Charge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>