force-app/main/default/objects/Order_Information__c/fields/Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Date__c</fullName>
    <label>Shipping Date</label>
    <type>TextArea</type>
</CustomField>