force-app/main/default/objects/Order_Information__c/fields/Shipping_Email__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>