force-app/main/default/objects/Order_Information__c/fields/Shipping_Landmark__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Landmark__c</fullName>
    <label>Landmark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>