force-app/main/default/objects/Order_Information__c/fields/Shipping_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>