force-app/main/default/objects/Order_Information__c/fields/Shipping_Phone__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>