force-app/main/default/objects/Order_Information__c/fields/Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>