force-app/main/default/objects/Order_Information__c/fields/Special_Case_Comments__c.field-meta.xml
<CustomField>
    <fullName>Special_Case_Comments__c</fullName>
    <inlineHelpText>In case of manual changes, please fill this field for reporting reference</inlineHelpText>
    <label>Special Case Comments</label>
    <type>TextArea</type>
</CustomField>