force-app/main/default/objects/Order_Information__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <label>Total Logical CP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>