force-app/main/default/objects/Order_Information__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test</label>
    <type>Checkbox</type>
</CustomField>