force-app/main/default/objects/Order_Information__c/fields/Test_Formula__c.field-meta.xml
<CustomField>
    <fullName>Test_Formula__c</fullName>
    <formula>IF(  Test__c == True, True,  IF(Customer_Contact__r.Test__c == True, True, False) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test P</label>
    <type>Checkbox</type>
</CustomField>