force-app/main/default/objects/Order_Information__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <inlineHelpText>Total Payable Amount including cod and shipping charge.</inlineHelpText>
    <label>Total Payable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>