force-app/main/default/objects/Order_Information__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <description>Sum of All Unit Prices of Products</description>
    <label>Total Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>