force-app/main/default/objects/Order_Information__c/fields/Total_Saving__c.field-meta.xml
<CustomField>
    <fullName>Total_Saving__c</fullName>
    <label>Total Saving</label>
    <length>255</length>
    <type>Text</type>
</CustomField>