force-app/main/default/objects/Order_Information__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <label>Tracking Number</label>
    <type>TextArea</type>
</CustomField>