force-app/main/default/objects/Order_Information__c/fields/url_params__c.field-meta.xml
<CustomField>
    <fullName>url_params__c</fullName>
    <label>url_params</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>