force-app/main/default/objects/Order_Information__c/fields/UTM_Content__c.field-meta.xml
<CustomField>
    <fullName>UTM_Content__c</fullName>
    <label>UTM Content</label>
    <type>TextArea</type>
</CustomField>