force-app/main/default/objects/Order_Information__c/fields/UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium__c</fullName>
    <label>UTM Medium</label>
    <type>TextArea</type>
</CustomField>