force-app/main/default/objects/Order_Information__c/fields/UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source__c</fullName>
    <label>UTM Source</label>
    <type>TextArea</type>
</CustomField>