force-app/main/default/objects/Order_Information__c/fields/UTM_Term__c.field-meta.xml
<CustomField>
    <fullName>UTM_Term__c</fullName>
    <label>UTM Term</label>
    <type>TextArea</type>
</CustomField>