force-app/main/default/objects/Order_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payment_Status__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Customer_Contact__c</columns>
    <columns>Billing_Email__c</columns>
    <columns>Transaction_Id__c</columns>
    <columns>orderDate__c</columns>
    <columns>Created_Date_Time__c</columns>
    <columns>Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>SalesTeam</group>
        <group>We_Care</group>
    </sharedTo>
</ListView>