force-app/main/default/objects/Order_Information__c/listViews/Booked_Order.listView-meta.xml
<ListView>
    <fullName>Booked_Order</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Order_Number__c</columns>
    <columns>Customer_Contact__c</columns>
    <columns>Billing_Email__c</columns>
    <columns>orderDate__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Booked</value>
    </filters>
    <label>Booked Order</label>
    <sharedTo>
        <group>SalesTeam</group>
    </sharedTo>
</ListView>