force-app/main/default/objects/Order_Information__c/listViews/Booked_Order_to_Sanjeet.listView-meta.xml
<ListView>
    <fullName>Booked_Order_to_Sanjeet</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4 OR 5)</booleanFilter>
    <columns>NAME</columns>
    <columns>Order_Number__c</columns>
    <columns>orderDate__c</columns>
    <columns>CustomerName__c</columns>
    <columns>Billing_Email__c</columns>
    <columns>Customer_Phone__c</columns>
    <columns>CC_Remarks_1__c</columns>
    <columns>CC_Remarks_2__c</columns>
    <columns>CC_Remarks_3__c</columns>
    <columns>Confirmed_Order__c</columns>
    <columns>Not_interested__c</columns>
    <columns>Other_Comments_CC__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Sanjeet</value>
    </filters>
    <filters>
        <field>Confirmed_Order__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CC_Remarks_1__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CC_Remarks_2__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CC_Remarks_3__c</field>
        <operation>equals</operation>
    </filters>
    <label>Booked Order to Sanjeet</label>
    <sharedTo>
        <group>CC_Person_3</group>
    </sharedTo>
</ListView>